Fixed bug #38047 ("file" and "line" sometimes not set in backtrace from inside error handler)